Fix upgrade scripts